# modelzoo

./: .gitignore  .pre-commit-config.yaml  README.md  env.yaml  mkdocs.yml  models.dvc  pyproject.toml  setup.cfg
.dvc/: config
.github/workflows/: publish.yml  test_suite.yml
conf/: default.yaml
conf/nn/: aes.yaml  default.yaml
conf/nn/data/: default.yaml
conf/nn/module/: autoencoder.yaml
conf/nn/module/model/: ae.yaml  linearized_ae.yaml  linearized_vae.yaml  rel_linearized_ae.yaml  rel_linearized_vae.yaml  relbridge_all_ae.yaml  relbridge_cos_eu_l1_ae.yaml  relbridge_cosine_ae.yaml  relbridge_euclidean_ae.yaml  relbridge_l1_ae.yaml  relbridge_linf_ae.yaml  relbridge_none_ae.yaml  vae.yaml
conf/train/: reconstruction.yaml
data/: .gitignore  embeddings.dvc  weights.dvc
docs/: index.md
models/: checkpoints.dvc  index.csv
notebooks/: load_model_mwe.ipynb
src/modelzoo/: __init__.py  run.py
src/modelzoo/data/: datasetdict.py
src/modelzoo/data/vision/: data_transforms.py  datamodule.py
src/modelzoo/modules/: relative.py
src/modelzoo/modules/aes/: ae.py  blocks.py  latent_normalization.py  vae.py
src/modelzoo/pl_modules/: pl_abstractmodule.py  pl_module.py
src/modelzoo/pl_modules/aes/: pl_autoencoder.py  (+1 more)
src/modelzoo/relative/: aggregation.py  projection.py
src/modelzoo/scripts/: train_aes.sh  train_bridges.sh  train_vae.sh
src/modelzoo/ui/: run.py
src/modelzoo/utils/: io_model.py  io_utils.py  utils.py  wandb_utils.py
tests/: conftest.py  test_checkpoint.py  test_configuration.py  test_resume.py
tests/restore/: test_restore.py
(+7 files in other folders)
