[metadata]
name = modelzoo
description = A repository that contains models implementations, their weights and the embeddings produced on different datasets
url = https://github.com/lucmos/modelzoo
long_description = file: README.md
author = Luca Moschella
author_email = luca.moschella94@gmail.com
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    nn-template-core==0.3.*
    anypy==0.0.4
    latentis>=0.0.3

    # Add project specific dependencies
    # Stuff easy to break with updates
    lightning==2.0.*
    torchmetrics==1.0.*
    hydra-core==1.3.*
    wandb
    streamlit
    # hydra-joblib-launcher

    dvc_gdrive
    Deprecated

    backports.strenum
    scikit-learn
    datasets
    plotly
    seaborn

    # Stable stuff usually backward compatible
    rich
    dvc
    python-dotenv
    matplotlib
    stqdm

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    ipykernel
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
